Fix GitHub Pages hierarchy: add layout/title/parent/nav_order/permalink to 47 keyword files; wrap metadata boxes in code fences; create Testing/Clean Code/DevOps category index.md files; update DICTIONARY_TEMPLATE with correct frontmatter format; update root index.md navigation